--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1302,26 +1302,26 @@ button.close{padding:0;cursor:pointer;background:0 0;border:0;-webkit-appearance
 .modal-content{box-shadow:0 5px 15px rgba(0,0,0,.5)}
 .modal-sm{width:300px}
 }
-.tooltip.top-left .tooltip-arrow,.tooltip.top-right .tooltip-arrow{bottom:0;margin-bottom:-5px;border-width:5px 5px 0;border-top-color:#000}
+.tooltip.top-left .tooltip-arrow,.tooltip.top-right .tooltip-arrow{bottom:0;margin-bottom:-12px;border-width:12px 12px 0;border-top-color:#393F4C}
 @media (min-width:992px){.modal-lg{width:900px}
 }
 .tooltip{position:absolute;z-index:1070;display:block;text-align:left;text-align:start;font-size:12px;opacity:0;filter:alpha(opacity=0)}
-.tooltip.in{opacity:.9;filter:alpha(opacity=90)}
-.tooltip.top{margin-top:-3px;padding:5px 0}
-.tooltip.right{margin-left:3px;padding:0 5px}
-.tooltip.bottom{margin-top:3px;padding:5px 0}
-.tooltip.left{margin-left:-3px;padding:0 5px}
-.tooltip-inner{max-width:200px;padding:3px 8px;color:#fff;text-align:center;background-color:#000;border-radius:3px}
+.tooltip.in{opacity:1;filter:alpha(opacity=100)}
+.tooltip.top{margin-top:-3px;padding:12px 0}
+.tooltip.right{margin-left:3px;padding:0 12px}
+.tooltip.bottom{margin-top:3px;padding:12px 0}
+.tooltip.left{margin-left:-3px;padding:0 12px}
+.tooltip-inner{max-width:275px;padding:3px 8px;color:#AAA9A9;text-align:center;background-color:#393F4C;border-radius:3px}
 .tooltip-arrow{position:absolute;width:0;height:0;border-color:transparent;border-style:solid}
-.tooltip.top .tooltip-arrow{bottom:0;left:50%;margin-left:-5px;border-width:5px 5px 0;border-top-color:#000}
-.tooltip.top-left .tooltip-arrow{right:5px}
-.tooltip.top-right .tooltip-arrow{left:5px}
-.tooltip.right .tooltip-arrow{top:50%;left:0;margin-top:-5px;border-width:5px 5px 5px 0;border-right-color:#000}
-.tooltip.left .tooltip-arrow{top:50%;right:0;margin-top:-5px;border-width:5px 0 5px 5px;border-left-color:#000}
-.tooltip.bottom .tooltip-arrow,.tooltip.bottom-left .tooltip-arrow,.tooltip.bottom-right .tooltip-arrow{border-width:0 5px 5px;border-bottom-color:#000;top:0}
-.tooltip.bottom .tooltip-arrow{left:50%;margin-left:-5px}
-.tooltip.bottom-left .tooltip-arrow{right:5px;margin-top:-5px}
-.tooltip.bottom-right .tooltip-arrow{left:5px;margin-top:-5px}
+.tooltip.top .tooltip-arrow{bottom:0;left:50%;margin-left:-12px;border-width:12px 12px 0;border-top-color:#393F4C}
+.tooltip.top-left .tooltip-arrow{right:12px}
+.tooltip.top-right .tooltip-arrow{left:12px}
+.tooltip.right .tooltip-arrow{top:50%;left:0;margin-top:-12px;border-width:12px 12px 12px 0;border-right-color:#393F4C}
+.tooltip.left .tooltip-arrow{top:50%;right:0;margin-top:-12px;border-width:12px 0 12px 12px;border-left-color:#393F4C}
+.tooltip.bottom .tooltip-arrow,.tooltip.bottom-left .tooltip-arrow,.tooltip.bottom-right .tooltip-arrow{border-width:0 12px 12px;border-bottom-color:#393F4C;top:0}
+.tooltip.bottom .tooltip-arrow{left:50%;margin-left:-12px}
+.tooltip.bottom-left .tooltip-arrow{right:12px;margin-top:-12px}
+.tooltip.bottom-right .tooltip-arrow{left:12px;margin-top:-12px}
 .popover{position:absolute;top:0;left:0;z-index:1060;display:none;max-width:276px;padding:1px;text-align:left;text-align:start;font-size:14px;background-color:#fff;border:1px solid #ccc;border:1px solid rgba(0,0,0,.2);border-radius:3px;box-shadow:0 5px 10px rgba(0,0,0,.2)}
 .carousel-caption,.carousel-control{text-shadow:0 1px 2px rgba(0,0,0,.6);text-align:center}
 .popover.top{margin-top:-10px}
@@ -1481,18 +1481,17 @@ td.visible-print,th.visible-print{display:table-cell!important}
 .tools-tabs.carousel-indicators li.active>a .tab-icon,.tools-tabs.carousel-indicators li.active>a:focus .tab-icon,.tools-tabs.carousel-indicators li.active>a:hover .tab-icon{background-color:#0E3F7A}
 .carousel-inner.tools-content{overflow:visible;font-size:16px;position:relative;z-index:1}
 .tools-screenshot{overflow:hidden;display:inline-block;padding:0 16px;margin:0 -16px}
-@media (max-width:767px){.tools-screenshot{margin-right:-30px;overflow:visible;margin-top:20px;margin-bottom:25px}
-}
 .carousel-indicators li,.carousel-indicators li.active{margin-left:6px;margin-right:6px}
 .tools-screenshot img{height:500px;width:auto;border-radius:5px;box-shadow:0 24px 16px rgba(0,0,0,.13)}
-@media (max-width:767px){.tools-screenshot img{height:auto;width:120%}
+@media (max-width:767px){.tools-screenshot{overflow:hidden;margin-top:20px;margin-bottom:60px}
+.tools-screenshot img{height:auto;width:100%;box-shadow:none;border-radius:2px}
 footer,section{padding-top:40px;padding-bottom:40px}
 }
 .glyphicon.text-muted{color:#DBDBDB}
 .carousel-indicators{bottom:-20px}
 .carousel-indicators li{background-color:#EBECEC;border:1px solid #EBECEC;cursor:pointer}
 #section-plans-pricing,section.section-inverse{background-color:#0E3F7A}
-.carousel-fade .carousel-inner .item{-webkit-transition-property:opacity;transition-property:opacity}
+.carousel-fade .carousel-inner .item{-webkit-transition-property:opacity;transition-property:opacity;width:100%}
 .carousel-fade .carousel-inner .active.left,.carousel-fade .carousel-inner .active.right,.carousel-fade .carousel-inner .item{opacity:0}
 .carousel-fade .carousel-inner .active,.carousel-fade .carousel-inner .next.left,.carousel-fade .carousel-inner .prev.right{opacity:1}
 .carousel-fade .carousel-inner .active.left,.carousel-fade .carousel-inner .active.right,.carousel-fade .carousel-inner .next,.carousel-fade .carousel-inner .prev{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}
@@ -1557,7 +1556,7 @@ section.section-inverse .section-subtitle a:after{content:"";display:block;width
 }
 #section-intro .laptop:after{content:"";display:inline-block;width:60%;max-width:720px;margin-left:auto;margin-right:auto;background-image:url(../images/laptop.png);background-size:contain}
 @media (max-width:767px){#section-intro .laptop:after{height:150px;width:80%;max-width:336px}
-#section-tools{overflow-x:visible}
+#section-tools{overflow-x:visible;overflow-y:hidden}
 }
 @media (min-width:768px) and (max-width:991px){#section-intro .laptop:after{height:250px;width:70%;max-width:460.8px}
 }
